force-app/zurich-base/main/default/objects/GDPR_DeleteOrderSettings__mdt/GDPR_DeleteOrderSettings__mdt.object-meta.xml
<CustomObject>
    <description>El propósito de este metadato es indicar los elementos que se tienen que borrar y el orden de borrado</description>
    <label>GDPR Orden Borrado</label>
    <pluralLabel>GDPR Ordenes Borrado</pluralLabel>
</CustomObject>