force-app/zurich-base/main/default/objects/GDPR_DeleteOrderSettings__mdt/fields/Initial_Object__c.field-meta.xml
<CustomField>
    <fullName>Initial_Object__c</fullName>
    <label>Initial Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>