force-app/zurich-base/main/default/objects/GDPR_DeleteOrderSettings__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>