force-app/zurich-base/main/default/objects/GDPR_DeleteOrderSettings__mdt/fields/ObjectToDelete__c.field-meta.xml
<CustomField>
    <fullName>ObjectToDelete__c</fullName>
    <label>ObjectToDelete</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>