force-app/zurich-base/main/default/objects/GDPR_DeleteOrderSettings__mdt/validationRules/LevelPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>LevelPositive</fullName>
    <active>true</active>
    <description>El nivel del objeto debe ser un número positivo</description>
    <errorConditionFormula>Level__c&lt;0</errorConditionFormula>
    <errorDisplayField>Level__c</errorDisplayField>
    <errorMessage>El nivel no puede ser un número negativo</errorMessage>
</ValidationRule>