force-app/zurich-base/main/default/objects/GDPR_DeleteOrderSettings__mdt/validationRules/OrderPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderPositive</fullName>
    <active>true</active>
    <description>El orden no puede ser un número negativo ni cero</description>
    <errorConditionFormula>Order__c&lt;0 || Order__c=0</errorConditionFormula>
    <errorDisplayField>Order__c</errorDisplayField>
    <errorMessage>El orden no puede ser un campo negativo o cero</errorMessage>
</ValidationRule>